tests/compilefail32.out
[1mtests/compilefail32.pas:13:5: [0m[1m[91merror:[0m Cannot assign to constant 'two'
    13 | 	two := 2;